--- a/eamless_Cloning.ipynb
+++ b/eamless_Cloning.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "This is an [jupyter](http://jupyter.org) not<javascript:prompt(document.cookie)>ebook. <img src=x onerror=alert(1)> ------------ [a](javascript:prompt(document.cookie)) \n",
-    "Lectures about Python, useful both for beginners and exp ![a](https://www.google.com/image.png"onload="alert(1)) erts, can be found at http://scipy-lectures.github.io.\n",
+    "Lectures about Python, useful both for beginners and exp ![a](https://www.google.com/image.png\"onload=\"alert(1)) erts, can be found at http://scipy-lectures.github.io.\n",
     "\n",
     "Open the notebook by (1) copying this file into a directory, (2) in that directory typing \n",
     "jupyter-notebook\n",
