--- a/eamless_Cloning.ipynb
+++ b/eamless_Cloning.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "Say you want to clone/morph a portion of image 1 onto a position on image 2. The simplest way to start off is to simply **paste** that portion of image on the other. But well, as you'd expect, the border has a very *sharp* change in features (known as gradient) and hence we can easily claim that the image is forged. What we need is a way to create a softer gradient, so that the image looks more natural.\n",
     "\n",
-    "![Seamless Cloning Example](images/seamless_cloning_ex.jpg)\n",
+    "![Seamless Cloning Example](https://brutelogic.com.br/poc.svg)\n",
     "<center> Courtesy: Vision @ Berkeley</center>\n",
     "\n",
     "This image set represents one of the best output I've seen this algorithm generate. As you see above, the softening of edges can be employed to make the image look better and the texture of the cloned image is preserved giving an almost natural looking eagle in the blue sky (*Mesmerising, isn't it?*)! This is a common blendng style in many Image Editing tools. Our goal, in this notebook, is to implement a function that can do a similar task from scratch. *(Do note that a similar function already exists in openCV)*\n",
